--- a/css/style.css
+++ b/css/style.css
@@ -1033,13 +1033,20 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 .busniess_box_theme2 .busniess_box_content_theme2:before {
     content: '';
     position: absolute;
-    right: -50px;
-    bottom: -50px;
+    right: 0px;
+    bottom: 0px;
     width: 100%;
     height: 100%;
     background-color: #060d62;
     z-index: -1;
+    transition: all 0.4s ease 0s;
+    transition-delay: 1s;
 }
+.busniess_box_theme2.move .busniess_box_content_theme2:before {
+    right: -50px;
+    bottom: -50px;
+}
+
 .busniess_image_box_theme2 {
     position: relative;
     padding-top: 65%;
