--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,69 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     right: 0px;
     z-index: -2;
 }
+.banner_section.before_after_none:before,
+.banner_section.before_after_none:after{
+    display: none;
+}
+
+.banner_section.before_load .banner_slider {
+    transform: translate(-50%, 0);
+    opacity: 0;
+}
+.banner_slider{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform: none;
+    opacity: 1;
+    transition: all 0.5s linear;
+}
+.banner_slider:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: #b2b2b2;
+    opacity: 0.30;
+}
+.banner_slider_item{
+    height: 100vh;
+}
+.banner_slider img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.banner_section.before_load .banner_slider_overlay {
+    transform: translate(50%, 0);
+    opacity: 0;
+}
+.banner_slider_overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    z-index: 2;
+    transition: all 0.5s linear;
+    transform: none;
+    opacity: 1;
+}
+.banner_slider_overlay img{
+    height: 100%;
+    object-fit: cover;
+}
+.banner_section .banner_content_wrapper {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 3;
+}
 .banner_section .custom_container {
     width: 100%;
     max-width: 1068px;
