--- a/css/style.css
+++ b/css/style.css
@@ -662,7 +662,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     height: 100%;
     transform: none;
     opacity: 1;
-    transition: all 0.5s linear;
+    transition: all 0.75s linear;
 }
 .banner_slider:before{
     content: '';
@@ -699,6 +699,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     transition: all 0.5s linear;
     transform: none;
     opacity: 1;
+    transition-delay: 0.75s;
 }
 .banner_slider_overlay img{
     height: 100%;
@@ -726,6 +727,7 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     transition: all 0.75s linear;
     position: relative;
     z-index: 1;
+    transition-delay: .6s;
 }
 .banner_section h1 {
     font-size: 60px;
