--- a/css/style.css
+++ b/css/style.css
@@ -652,10 +652,18 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 .banner_section.before_after_none:after{
     display: none;
 }
-
 .banner_section.before_load .banner_slider {
     transform: translate(-50%, 0);
     opacity: 0;
+}
+.main.top_page_header .banner_section {
+    margin-top: 0 !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 .banner_slider{
     position: relative;
